@@ -1,3 +1,8 @@
+2017-03-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/kmeans.cpp: Added documentation and example
+	* man/kmeans.Rd: Ditto
+
 2017-02-27  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/coverTreeNeighbor.cpp: Added documentation and example
